@@ -1,3 +1,12 @@
+2005-03-25  Bruno Haible  <bruno@clisp.org>
+
+	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Set host_cpu_instructionset
+	instead of modifying host_cpu.
+	(CL_CANONICAL_HOST_CPU_FOR_FFCALL): Set host_cpu_abi instead of
+	modifying host_cpu.
+	* m4/ffcall-codeexec.m4 (CL_CODEEXEC): Use host_cpu_abi instead of
+	host_cpu.
+
 2005-03-16  Bruno Haible  <bruno@clisp.org>
 
 	* m4/stdint.m4: Update from gnulib.
